[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdou-jwxt"
version = "0.1.0"
description = "广东海洋大学教务系统全自动登录客户端"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "DrissionPage>=4.1",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gdou_jwxt*"]
